# Confido

./: README.md  pyproject.toml  requirements.txt
front_desk_assistant/: main.py
postgresql/: app.py  main.py
postgresql/scripts/: populate_tables.sql
voice_agent/: gpt_agent.py  gpt_logic.py  main.py  test.py
voice_agent/assistants/: front_desk_assistant.py
