[project]
name = "confido"
version = "0.1.0"
description = "AI-Powered"
authors = [
    {name = "Healthcare Voice Assistant"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "twilio (>=9.6.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
